--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>爱牛币-股市牛博汇-投资日历</title>
+<title>爱牛币-股市牛博汇-投资日历-门户头条</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="">
 <meta name="description" content="">
@@ -29,7 +29,7 @@
         <li class="divider"></li>
         {{~ it.articlesSina:article:index}}
         <li>
-          <a href="{{=article.url}}" target="_blank" title="{{=article.title}}">{{=article.title}}</a>
+          <a href="{{=article.url}}" target="_blank">{{=article.title}}</a>
         </li>
         {{~}}
 
@@ -44,7 +44,7 @@
         <li class="divider"></li>
         {{~ it.articlesSohu:article:index}}
         <li>
-          <a href="{{=article.url}}" target="_blank" title="{{=article.title}}">{{=article.title}}</a>
+          <a href="{{=article.url}}" target="_blank">{{=article.title}}</a>
         </li>
         {{~}}
 
@@ -59,7 +59,7 @@
         <li class="divider"></li>
         {{~ it.articles163:article:index}}
         <li>
-          <a href="{{=article.url}}" target="_blank" title="{{=article.title}}">{{=article.title}}</a>
+          <a href="{{=article.url}}" target="_blank">{{=article.title}}</a>
         </li>
         {{~}}
         <li><br/></li>
