--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -73,7 +73,7 @@
       <div class="keywords" id='keyNav'>
         <ul class="clearfix">
           <li>{{=it.keyword || '博客观点'}}</li>
-          <li class="pull-right"><a href="/rss/{{=it.keyword || ''}}" target="_blank">RSS</a></li>
+          <li class="pull-right"><a href="/home" target="_blank">更多</a></li>
         </ul>
       </div>
       <ul id="comments_list" class="unstyled comments">
@@ -123,7 +123,6 @@
           </div>
         </li>
       </ul>
-      <div class="pagination">{{=it.pagination || ''}}</div>
     </div>
     <div class="span4">
       <div class="nav-separator"></div>
