更新默认字体

--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -72,7 +72,7 @@
       <div class="nav-separator"></div>
       <div class="keywords" id='keyNav'>
         <ul class="clearfix">
-          <li>{{=it.keyword || '名博观点'}}</li>
+          <li><b>{{=it.keyword || '名博观点'}}</b></li>
           <li class="pull-right"><a href="/home" target="_blank">更多</a></li>
         </ul>
       </div>
@@ -142,7 +142,7 @@
 
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">RSS 订阅</li>
+        <li class="nav-header">订阅我们</li>
         <li><a href="/rss/{{=it.keyword || ''}}" target="_blank">RSS 订阅</a></li>
         <li class="divider"></li>
         <li class="nav-header">微信订阅</li>
