--- a/web/css/ourjs.css
+++ b/web/css/ourjs.css
@@ -1,4 +1,5 @@
 body {
+  font-family: serif;
   overflow-y: scroll;
 }
 
@@ -839,7 +840,7 @@ label.error {
 
 .keywords li {
   display: inline-block;
-  font-size: 14px;
+  font-size: 16px;
   padding: 4px 15px;
   line-height: 32px;
 }
@@ -1092,10 +1093,11 @@ label.error {
 
 .layout-pane li a i {
   margin-right: 18px;
-  width: 60px;
+  width: 50px;
   float: right;
   text-align: right;
   font-size: 12px;
+  font-style: normal;
 }
 
 .layout-pane .btn-primary {
@@ -1105,7 +1107,7 @@ label.error {
 
 .layout-pane .nav-header {
   color: #000;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .layout-pane .nav-header a {
