--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -26,7 +26,7 @@
       <div class="nav-separator"></div>
       <div class="keywords" id='keyNav'>
         <ul class="clearfix">
-          <li>{{=it.keyword || '博客观点'}}</li>
+          <li><b>{{=it.keyword || '名博观点'}}</b></li>
           <li class="pull-right"><a href="/rss/{{=it.keyword || ''}}" target="_blank">RSS</a></li>
         </ul>
       </div>
@@ -81,7 +81,7 @@
     <div class="span4">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">RSS 订阅</li>
+        <li class="nav-header">订阅我们</li>
         <li><a href="/rss/{{=it.keyword || ''}}" target="_blank">RSS 订阅</a></li>
         <li class="divider"></li>
         <li class="nav-header">微信订阅</li>
