--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -17,7 +17,7 @@
 <div class="container">
   <div class="row-fluid">
     <div class="span12">
-      <div style="background:#efefef;font-size:16px;text-align:center;margin:0 0 24px;line-height:44px">股市有风险，投资需谨慎</div>
+      <div style="background:#efefef;font-size:16px;text-align:center;margin:0 0 24px;padding:12px">我们不生产新闻，我们不推荐股票，我们只是勤劳的搬运工，股市有风险，投资需谨慎</div>
     </div>
   </div>
 
@@ -125,6 +125,20 @@
           <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </li>
       </ul>
+
+      <!--新闻联播-->
+      {{?it.articleCCTV && it.articleCCTV.content}}
+      <div class="nav-separator"></div>
+      <div class="dropdown-menu layout-pane">
+        <div class="keywords">
+          <ul class="clearfix">
+            <li><b>新闻联播 - <a href="/article/{{=it.articleCCTV.id}}" target="_blank">{{=it.articleCCTV.title}}</a></b></li>
+            <li class="pull-right"><a href="/user/cctv" target="_blank">更多</a></li>
+          </ul>
+        </div>
+        {{=it.articleCCTV.content}}
+      </div>
+      {{?}}
 
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
