--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -22,6 +22,37 @@
   </div>
 
   <div class="row-fluid">
+    <div class="span3">
+      <table class="table stock">
+        <tr><td>上证指数</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+        <tr><td>深训成指</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+        <tr><td>创业板指</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+      </table>
+    </div>
+    <div class="span3">
+      <table class="table stock">
+        <tr><td>恒生指数</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+        <tr><td>日经指数</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+        <tr><td>中国台湾</td><td><i>2890.06</i> <b class="down">-1.034%</b></td></tr>
+      </table>
+    </div>
+    <div class="span3">
+      <table class="table stock">
+        <tr><td>道琼斯</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+        <tr><td>纳斯达克</td><td><i>2890.06</i> <b class="down">-1.034%</b></td></tr>
+        <tr><td>欧洲斯托克</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+      </table>
+    </div>
+    <div class="span3">
+      <table class="table stock">
+        <tr><td>黄金</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+        <tr><td>原油</td><td><i>2890.06</i> <b class="down">-1.034%</b></td></tr>
+        <tr><td>汇率</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
+      </table>
+    </div>
+  </div>
+
+  <div class="row-fluid">
     <div class="span4">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
