--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -2,12 +2,11 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>爱牛币-股市牛博汇-投资日历-门户头条</title>
+<title>爱牛币-投资人的工具箱-牛博汇-投资日历-门户头条</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="">
 <meta name="description" content="">
 <!--#include="style.part"-->
-<script>var conf={{=it.conf}}</script>
 </head>
 
 <body class="bbs">
@@ -21,34 +20,76 @@
     </div>
   </div>
 
-  <div class="row-fluid">
+  <div class="row-fluid stock">
     <div class="span3">
-      <table class="table stock">
-        <tr><td>上证指数</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-        <tr><td>深训成指</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-        <tr><td>创业板指</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-      </table>
+      <div class="nav-separator"></div>
+      <ul class="dropdown-menu layout-pane">
+        <li class="nav-header">沪深指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="divider"></li>
+        <li>
+          <a href="" target="_blank">
+            <b>-1.034%</b><i>3068</i> 上证指数
+          </a>
+        </li>
+        <li>
+          <a href="" target="_blank">
+            <b>-1.034%</b><i>13068</i> 深训成指
+          </a>
+        </li>
+        <li>
+          <a href="" target="_blank">
+            <b>-1.034%</b><i>3068</i> 创业板指
+          </a>
+        </li>
+      </ul>
     </div>
     <div class="span3">
-      <table class="table stock">
-        <tr><td>恒生指数</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-        <tr><td>日经指数</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-        <tr><td>中国台湾</td><td><i>2890.06</i> <b class="down">-1.034%</b></td></tr>
-      </table>
+      <div class="nav-separator"></div>
+      <ul class="dropdown-menu layout-pane">
+        <li class="nav-header">亚太指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="divider"></li>
+        <li>
+          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>恒生指数</a>
+        </li>
+        <li>
+          <a href="" target="_blank" class="down"><b>-1.034%</b><i>2850</i>日经指数</a>
+        </li>
+        <li>
+          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>中国台湾</a>
+        </li>
+      </ul>
     </div>
     <div class="span3">
-      <table class="table stock">
-        <tr><td>道琼斯</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-        <tr><td>纳斯达克</td><td><i>2890.06</i> <b class="down">-1.034%</b></td></tr>
-        <tr><td>欧洲斯托克</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-      </table>
+      <div class="nav-separator"></div>
+      <ul class="dropdown-menu layout-pane">
+        <li class="nav-header">欧美指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="divider"></li>
+        <li>
+          <a href="" target="_blank" class="down"><b>-1.034%</b><i>2850</i>道琼斯</a>
+        </li>
+        <li>
+          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>纳斯达克</a>
+        </li>
+        <li>
+          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>欧洲斯托克</a>
+        </li>
+      </ul>
     </div>
     <div class="span3">
-      <table class="table stock">
-        <tr><td>黄金</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-        <tr><td>原油</td><td><i>2890.06</i> <b class="down">-1.034%</b></td></tr>
-        <tr><td>汇率</td><td><i>2890.06</i> <b>-1.034%</b></td></tr>
-      </table>
+      <div class="nav-separator"></div>
+      <ul class="dropdown-menu layout-pane">
+        <li class="nav-header">其它指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="divider"></li>
+        <li>
+          <a href="" target="_blank" class="down"><b>-1.034%</b><i>1036</i> 黄金</a>
+        </li>
+        <li>
+          <a href="" target="_blank"><b>-1.034%</b><i>3365</i> 原油</a>
+        </li>
+        <li>
+          <a href="" target="_blank"><b>-1.034%</b> <i>685</i> 汇率</a>
+        </li>
+      </ul>
     </div>
   </div>
 
