--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -24,70 +24,64 @@
     <div class="span3">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">沪深指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="nav-header">沪深指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank">
-            <b>-1.034%</b><i>3068</i> 上证指数
-          </a>
+          <a href="" target="_blank"><b data-bind="pSH">-1.034%</b><i data-bind="nSH">3068</i> 上证指数</a>
         </li>
         <li>
-          <a href="" target="_blank">
-            <b>-1.034%</b><i>13068</i> 深训成指
-          </a>
+          <a href="" target="_blank"><b data-bind="pSZ">-1.034%</b><i data-bind="nSZ">13068</i> 深训成指</a>
         </li>
         <li>
-          <a href="" target="_blank">
-            <b>-1.034%</b><i>3068</i> 创业板指
-          </a>
+          <a href="" target="_blank"><b data-bind="pCY">-1.034%</b><i data-bind="nCY">3068</i> 创业板指</a>
         </li>
       </ul>
     </div>
     <div class="span3">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">亚太指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="nav-header">亚太指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>恒生指数</a>
+          <a href="" target="_blank"><b data-bind="pHK">-1.034%</b><i data-bind="nHK">2850</i>恒生指数</a>
         </li>
         <li>
-          <a href="" target="_blank" class="down"><b>-1.034%</b><i>2850</i>日经指数</a>
+          <a href="" target="_blank"><b data-bind="pJP">-1.034%</b><i data-bind="nJP">2850</i>日经指数</a>
         </li>
         <li>
-          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>中国台湾</a>
+          <a href="" target="_blank"><b data-bind="pTW">-1.034%</b><i data-bind="nTW">2850</i>中国台湾</a>
         </li>
       </ul>
     </div>
     <div class="span3">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">欧美指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="nav-header">欧美指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank" class="down"><b>-1.034%</b><i>2850</i>道琼斯</a>
+          <a href="" target="_blank"><b data-bind="pUS">-1.034%</b><i data-bind="nUS">2850</i>道琼斯</a>
         </li>
         <li>
-          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>纳斯达克</a>
+          <a href="" target="_blank"><b data-bind="pNS">-1.034%</b><i data-bind="nNS">2850</i>纳斯达克</a>
         </li>
         <li>
-          <a href="" target="_blank"><b>-1.034%</b><i>2850</i>欧洲斯托克</a>
+          <a href="" target="_blank"><b data-bind="pEU">-1.034%</b><i data-bind="nEU">2850</i>欧洲斯托克</a>
         </li>
       </ul>
     </div>
     <div class="span3">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">其它指数 <a href='/user/163' target="_blank">更多</a></li>
+        <li class="nav-header">其它指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank" class="down"><b>-1.034%</b><i>1036</i> 黄金</a>
+          <a href="" target="_blank"><b data-bind="pGOLD">-1.034%</b><i data-bind="nGOLD">1036</i> 黄金</a>
         </li>
         <li>
-          <a href="" target="_blank"><b>-1.034%</b><i>3365</i> 原油</a>
+          <a href="" target="_blank"><b data-bind="pOIL">-1.034%</b><i data-bind="nOIL">3365</i> 原油</a>
         </li>
         <li>
-          <a href="" target="_blank"><b>-1.034%</b> <i>685</i> 汇率</a>
+          <a href="" target="_blank"><b data-bind="pRMB">-1.034%</b><i data-bind="nRMB">685</i> 汇率</a>
         </li>
       </ul>
     </div>
