--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -27,13 +27,13 @@
         <li class="nav-header">沪深指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank"><b data-bind="pSH">-1.034%</b><i data-bind="nSH">3068</i> 上证指数</a>
+          <a href="http://finance.sina.com.cn/realstock/company/sh000001/nc.shtml" target="_blank"><b data-bind="pSH"></b><i data-bind="nSH"></i> 上证指数</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pSZ">-1.034%</b><i data-bind="nSZ">13068</i> 深训成指</a>
+          <a href="http://finance.sina.com.cn/realstock/company/sz399001/nc.shtml" target="_blank"><b data-bind="pSZ"></b><i data-bind="nSZ"></i> 深训成指</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pCY">-1.034%</b><i data-bind="nCY">3068</i> 创业板指</a>
+          <a href="http://finance.sina.com.cn/realstock/company/sz399006/nc.shtml" target="_blank"><b data-bind="pCY"></b><i data-bind="nCY"></i> 创业板指</a>
         </li>
       </ul>
     </div>
@@ -43,13 +43,13 @@
         <li class="nav-header">亚太指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank"><b data-bind="pHK">-1.034%</b><i data-bind="nHK">2850</i>恒生指数</a>
+          <a href="http://finance.yahoo.com/echarts?s=%5EHSI+Interactive" target="_blank"><b data-bind="pHK"></b><i data-bind="nHK"></i>恒生指数</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pJP">-1.034%</b><i data-bind="nJP">2850</i>日经指数</a>
+          <a href='https://finance.yahoo.com/echarts?s=%5En225+Interactive' target="_blank"><b data-bind="pJP"></b><i data-bind="nJP"></i>日经指数</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pTW">-1.034%</b><i data-bind="nTW">2850</i>中国台湾</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5ETWII+Interactive' target="_blank"><b data-bind="pTW"></b><i data-bind="nTW"></i>中国台湾</a>
         </li>
       </ul>
     </div>
@@ -59,13 +59,13 @@
         <li class="nav-header">欧美指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank"><b data-bind="pUS">-1.034%</b><i data-bind="nUS">2850</i>道琼斯</a>
+          <a href="http://finance.yahoo.com/echarts?s=%5EDJI+Interactive" target="_blank"><b data-bind="pUS"></b><i data-bind="nUS"></i>道琼斯</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pNS">-1.034%</b><i data-bind="nNS">2850</i>纳斯达克</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5Eixic+interactive' target="_blank"><b data-bind="pNS"></b><i data-bind="nNS"></i>纳斯达克</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pEU">-1.034%</b><i data-bind="nEU">2850</i>欧洲斯托克</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5ESTOXX50E+Interactive' target="_blank"><b data-bind="pEU"></b><i data-bind="nEU"></i>欧洲斯托克</a>
         </li>
       </ul>
     </div>
@@ -75,13 +75,13 @@
         <li class="nav-header">其它指数</li>
         <li class="divider"></li>
         <li>
-          <a href="" target="_blank"><b data-bind="pGOLD">-1.034%</b><i data-bind="nGOLD">1036</i> 黄金</a>
+          <a href="http://finance.sina.com.cn/futures/quotes/GC.shtml" target="_blank"><b data-bind="pGOLD"></b><i data-bind="nGOLD"></i> 黄金</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pOIL">-1.034%</b><i data-bind="nOIL">3365</i> 原油</a>
+          <a href="http://finance.sina.com.cn/futures/quotes/CL.shtml" target="_blank"><b data-bind="pOIL"></b><i data-bind="nOIL"></i> 原油</a>
         </li>
         <li>
-          <a href="" target="_blank"><b data-bind="pRMB">-1.034%</b><i data-bind="nRMB">685</i> 汇率</a>
+          <a href="http://finance.sina.com.cn/money/forex/hq/USDCNY.shtml" target="_blank"><b data-bind="pRMB"></b><i data-bind="nRMB"></i> 汇率</a>
         </li>
       </ul>
     </div>
