更改K线图默认显示类型

--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -43,13 +43,13 @@
         <li class="nav-header">亚太指数</li>
         <li class="divider"></li>
         <li>
-          <a href="http://finance.yahoo.com/echarts?s=%5EHSI+Interactive" target="_blank"><b data-bind="pHK"></b><i data-bind="nHK"></i>恒生指数</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5EHSI+Interactive#{"showCandle":true,"lineType":"candle"}' target="_blank"><b data-bind="pHK"></b><i data-bind="nHK"></i>恒生指数</a>
         </li>
         <li>
-          <a href='https://finance.yahoo.com/echarts?s=%5En225+Interactive' target="_blank"><b data-bind="pJP"></b><i data-bind="nJP"></i>日经指数</a>
+          <a href='https://finance.yahoo.com/echarts?s=%5En225+Interactive#{"showCandle":true,"lineType":"candle"}' target="_blank"><b data-bind="pJP"></b><i data-bind="nJP"></i>日经指数</a>
         </li>
         <li>
-          <a href='http://finance.yahoo.com/echarts?s=%5ETWII+Interactive' target="_blank"><b data-bind="pTW"></b><i data-bind="nTW"></i>中国台湾</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5ETWII+Interactive#{"showCandle":true,"lineType":"candle"}' target="_blank"><b data-bind="pTW"></b><i data-bind="nTW"></i>中国台湾</a>
         </li>
       </ul>
     </div>
@@ -59,13 +59,13 @@
         <li class="nav-header">欧美指数</li>
         <li class="divider"></li>
         <li>
-          <a href="http://finance.yahoo.com/echarts?s=%5EDJI+Interactive" target="_blank"><b data-bind="pUS"></b><i data-bind="nUS"></i>道琼斯</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5EDJI+Interactive#{"showCandle":true,"lineType":"candle"}' target="_blank"><b data-bind="pUS"></b><i data-bind="nUS"></i>道琼斯</a>
         </li>
         <li>
-          <a href='http://finance.yahoo.com/echarts?s=%5Eixic+interactive' target="_blank"><b data-bind="pNS"></b><i data-bind="nNS"></i>纳斯达克</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5Eixic+interactive#{"showCandle":true,"lineType":"candle"}' target="_blank"><b data-bind="pNS"></b><i data-bind="nNS"></i>纳斯达克</a>
         </li>
         <li>
-          <a href='http://finance.yahoo.com/echarts?s=%5ESTOXX50E+Interactive' target="_blank"><b data-bind="pEU"></b><i data-bind="nEU"></i>欧洲斯托克</a>
+          <a href='http://finance.yahoo.com/echarts?s=%5ESTOXX50E+Interactive#{"showCandle":true,"lineType":"candle"}' target="_blank"><b data-bind="pEU"></b><i data-bind="nEU"></i>欧洲斯托克</a>
         </li>
       </ul>
     </div>
