--- a/web/css/ourjs.css
+++ b/web/css/ourjs.css
@@ -1138,12 +1138,16 @@ label.error {
 }
 
 
+.navbar-static-top {
+  margin-bottom: 24px;
+}
+
 
 .notice {
   background:#efefef;
   font-size:16px;
   text-align:center;
-  margin:24px 0;
+  margin:0 0 24px 0;
   padding:12px
 }
 
